--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "webpack-dev-server --open --port 3000"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.1.3"
+    "react-tabs-redux": "^4.0.0",
+    "styled-components": "^4.1.3",
+    "yarn": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
